--- a/mail/.gitignore
+++ b/mail/.gitignore
@@ -1,4 +1,3 @@
-HELP.md
 /target/
 !.mvn/wrapper/maven-wrapper.jar
 
@@ -16,11 +15,12 @@ HELP.md
 *.iws
 *.iml
 *.ipr
-
+*.class
+*.log
 ### NetBeans ###
 /nbproject/private/
+/build/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-/build/
