--- a/wechat/pom.xml
+++ b/wechat/pom.xml
@@ -160,6 +160,13 @@
             <version>3.3.3</version>
         </dependency>
 
+        <!--个推-->
+        <dependency>
+            <groupId>com.gexin.platform</groupId>
+            <artifactId>gexin-rp-sdk-http</artifactId>
+            <version>4.1.0.1</version>
+        </dependency>
+
         <!--junit-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -173,6 +180,13 @@
             <scope>runtime</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>getui-nexus</id>
+            <url>http://mvn.gt.igexin.com/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
