--- a/mp/src/main/resources/application.yml
+++ b/mp/src/main/resources/application.yml
@@ -14,3 +14,7 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     # 返回map时true:当查询数据为空时字段返回为null,false:不加这个查询数据为空时，字段将被隐藏
     call-setters-on-nulls: true
+#打印SQL语句
+logging:
+  level:
+    com.xub.mp.mapper : debug  #mapper对应包名
