--- a/shiro/src/main/resources/application.yml
+++ b/shiro/src/main/resources/application.yml
@@ -1,10 +1,11 @@
+
 spring:
   # Redis数据源
   redis:
-    host: localhost
+    host: 127.0.0.1
     port: 6379
     timeout: 3000
-    password:
+    password: 123456
     jedis:
       pool:
         max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
@@ -16,5 +17,24 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/permission?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false
     username: root
-    password: root
+    password: 12345678
     type: com.alibaba.druid.pool.DruidDataSource
+# mybatis-plus相关配置
+mybatis-plus:
+  # xml扫描，多个目录用逗号或者分号分隔（告诉 Mapper 所对应的 XML 文件位置）
+  mapper-locations: classpath:mapper/*.xml
+  global-config:
+    db-config:
+      #字段策略 IGNORED:"忽略判断"  NOT_NULL:"非 NULL 判断")  NOT_EMPTY:"非空判断"
+      field-strategy: NOT_EMPTY
+      #数据库类型
+      db-type: MYSQL
+    configuration:
+      # 是否开启自动驼峰命名规则映射:从数据库列名到Java属性驼峰命名的类似映射
+      map-underscore-to-camel-case: true
+      # 返回map时true:当查询数据为空时字段返回为null,false:不加这个查询数据为空时，字段将被隐藏
+      call-setters-on-nulls: true
+server:
+  port: 8081
+  servlet:
+    context-path: /shiro
