--- a/mp/src/main/resources/application.yml
+++ b/mp/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/study?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
     username: root
-    password: 12345678
+    password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
 # mybatis-plusœ‡πÿ≈‰÷√
 mybatis-plus:
