--- a/common_mapper/pom.xml
+++ b/common_mapper/pom.xml
@@ -10,10 +10,9 @@
     <description>Demo project for Spring Boot----commonMybatis</description>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.6.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.xub.springboot.study</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
 
