--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -9,11 +9,10 @@
     <name>mybatis</name>
     <description>Demo project for Spring Boot ----Mybatis</description>
 
-    <!-- Inherit defaults from Spring Boot -->
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <groupId>com.xub.springboot.study</groupId>
+        <artifactId>parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <properties>
