--- a/sba/client/pom.xml
+++ b/sba/client/pom.xml
@@ -42,10 +42,12 @@
             <optional>true</optional> <!-- 这个需要为 true 热部署才有效 -->
         </dependency>
 
+        <!--   安全模块     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+
     </dependencies>
 
 </project>
