--- a/sba/client/src/main/resources/application.properties
+++ b/sba/client/src/main/resources/application.properties
@@ -6,8 +6,12 @@ management.endpoints.jmx.exposure.exclude=shutdown
 management.endpoints.jmx.exposure.include=*
 # Expose HTTP REST Endpoint
 management.endpoints.web.exposure.exclude=
+#management.endpoints.web.exposure.include=*
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+#metrics.tags
+management.endpoint.metrics.tags.application=${spring.application.name}
 
 #安全相关（服务端）
 spring.boot.admin.client.username=server
