feat: 泛型类型推断使用

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <module>redis</module>
         <module>sba</module>
         <module>shiro</module>
+        <module>type_inference</module>
         <module>websocket</module>
         <module>wechat</module>
     </modules>
